[bug] new todo cursor jump

--- a/src/web/pcss/main.pcss
+++ b/src/web/pcss/main.pcss
@@ -33,6 +33,19 @@ a{
 }
 /*mat css END*/
 
+
+.new-todo.input-field{
+
+  width: 100%;
+  top:6px;
+  
+  & input:focus, & label{
+    color:white!important;
+    border-color:white!important;
+  }
+
+}
+
 .focusable-list > * {
   outline: none;
   position: relative;
